--- a/Healthcare chatbot/base/templates/base/chat.html
+++ b/Healthcare chatbot/base/templates/base/chat.html
@@ -7,16 +7,42 @@
     
 
 {% block content %}
-<div class="container">
+<div class="container init hidden" id="interview-window">
+  <section id="welcome">
+    <div class="bonjour">
+    <div class="text">
+      <h3 style="text-align: left;" class="ng-scope"> Bonjour!</h3>
+      <p style="text-align: left;" class="ng-scope">Vous êtes sur le point d'utiliser un examen de santé court (3 minutes), sécurisé et anonyme. Vos réponses seront soigneusement analysées et vous découvrirez les causes possibles de vos symptômes.</p>
+      <br>
+      <div class="interview-id-temp"> ID d'entretien : <span class="interviewId" id="interview_id"></span></div>
+    </div>
+    <div class="doc-image">
+      <img src="{% static '/img/doctor.png' %}" alt="doctor">
+    </div>
+    </div>
+    <div class="actions">
+    <button class="button" id="get-metadata">Next</button>
+    </div>
+  </section>
+  <section class="hidden" id="meta">
+    <!--TODO: style this form as multiple steps ! -->
+    <form action="" style="color:#222;" id="meta-form">
+      {{ metaform.as_p }}
+      <input type="submit" value="Finish" id="send-meta">
+    </form>
+    
+  </section>
+</div>
+<div class="container" id="chat-window">
     <div class="messaging" style="display: flex;">
-          <div class="inbox_msg">
+      <div class="inbox_msg">
             <div class="inbox_people">
               <div class="headind_srch">
                 <div class="recent_heading">
                   <h4>Chat History</h4>
                 </div>
                 <div class="srch_bar">
-                    <button class="btn btn-sm btn-outline-secondary" id="results_button">Results</button>
+                    <button class="btn btn-sm btn-outline-secondary" id="interview_creation">New Interview</button>
                   <button class="btn btn-sm btn-outline-secondary" id="switch_button">Choose Symptom</button>
                 </div>
               </div>
@@ -130,7 +156,8 @@
             
             
             </div>
-            </div><div class="mesgs">
+      </div>
+      <div class="mesgs">
             <div class="msg_history" id="message-box"></div>
             <div class="type_msg">
               <div class="input_msg_write">
@@ -138,16 +165,20 @@
                 <button class="msg_send_btn" type="button" id="send-message"><i class="fa fa-paper-plane-o" aria-hidden="true"></i></button>
               </div>
             </div>
-          </div>
-          </div>
-          
+      </div>
+    </div>
 </div>
 {% endblock content %}
     
 {% block extra_scripts %}
 <script>
     const IMG_URL = "{% static '/img/asuna.png' %}"
+    document.querySelector("body").classList.remove();
+    document.querySelector("#cover").classList.remove("cover-container",);
+    document.querySelector("header").classList.add("nav-extra"); 
 </script>
+<script src="{% static '/js/utils.js'%}"></script>
+<script src="{% static '/js/interview.js'%}"></script>
 <script src="{% static '/js/chat.js'%}"></script>
+<script src="{% static '/js/main.js'%}"></script>
 {% endblock extra_scripts %}
-        
