--- a/Healthcare chatbot/static/css/chat.css
+++ b/Healthcare chatbot/static/css/chat.css
@@ -199,3 +199,57 @@ img{ max-width:100%;}
   transform: translate(70%, 0);
   padding: 0 0 1rem 0;
 }
+
+.init{
+  background-color: #f8f8f8;
+  padding: 2rem;
+  color: #464646;
+}
+.bonjour{
+  display: flex;
+  color: #464646;
+}
+
+.text{
+  align-self: center;
+  color:#222;
+}
+
+.actions{
+  border-top: 2px solid #7c7c7c;
+  display: flex;
+  padding: 2rem 2rem 0 0;
+  flex-direction: row-reverse;
+}
+
+.button{
+  color: #fff;
+  outline: none!important;
+  font-size: 16px;
+  background-color: #008b5d;
+  border: none;
+  padding: 11px 34px; 
+  transition: background 0.5s ease;
+
+  margin-bottom: 0;
+  font-weight: 500;
+  text-align: center;
+  vertical-align: middle;
+  touch-action: manipulation;
+  cursor: pointer;
+  background-image: none;
+  border: 1px solid transparent;
+  white-space: nowrap;
+  font-size: 15px;
+  line-height: 1.4675;
+  border-radius: 5px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.button:hover{
+  color: #f8f8f8;
+  background-color: #00c986;
+}
+
